--- a/sentiment analysis.ipynb
+++ b/sentiment analysis.ipynb
@@ -254,6 +254,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.71, 0.66, 0.73, 0.7 , 0.64, 0.68, 0.72, 0.69, 0.65, 0.72])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "cross_val_score(bnb, data, target, cv=10)\n",
+    "#relatively the same results throughout, so the model doesn;t seem to overfit too "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
